modify to run on lab (1)

--- a/src_chung/get_data.ipynb
+++ b/src_chung/get_data.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import json\n",
-    "from get_reaction_data import get_graph_data"
+    "from src_chung.get_reaction_data import get_graph_data"
    ]
   },
   {
