--- a/draft.ipynb
+++ b/draft.ipynb
@@ -349,7 +349,8 @@
     "\n",
     "    return new_react\n",
     "\n",
-    "data['new_rxn']=data['rxn'].apply(new_smi_react)"
+    "data['new_rxn']=data['rxn'].apply(new_smi_react)\n",
+    "data=data.dropna(subset=['new_rxn'])"
    ]
   },
   {
