--- a/draft.ipynb
+++ b/draft.ipynb
@@ -324,28 +324,28 @@
     "import numpy as np\n",
     "def new_smi_react(smi):\n",
     "    rxnmapper = RXNMapper()\n",
-    "    error_smi=[]\n",
     "    try:\n",
     "        mapped_smi=rxnmapper.get_attention_guided_atom_maps([smi])[0]['mapped_rxn']\n",
+    "        precusor,product=smi.split('>>')\n",
+    "        precusor1,product1=mapped_smi.split('>>')\n",
+    "\n",
+    "        # Choose mapped precusor\n",
+    "        ele_react=precusor.split('.')\n",
+    "        ele_react1=precusor1.split('.')\n",
+    "        precusor_main=[i for i in ele_react if i not in ele_react1]\n",
+    "        precusor_str='.'.join(precusor_main)\n",
+    "        reagent=[i for i in ele_react if i in ele_react1]\n",
+    "\n",
+    "        # Choose mapped product\n",
+    "        ele_pro=product.split('.')\n",
+    "        ele_pro1=product1.split('.')\n",
+    "        product_main=[i for i in ele_pro if i not in ele_pro1]\n",
+    "        product_str='.'.join(product_main)\n",
+    "        \n",
+    "        new_react=precusor_str+'>>'+product_str\n",
     "    except:\n",
-    "        error_smi.append(smi)\n",
-    "    precusor,product=smi.split('>>')\n",
-    "    precusor1,product1=mapped_smi.split('>>')\n",
+    "        new_react=np.nan\n",
     "\n",
-    "    # Choose mapped precusor\n",
-    "    ele_react=precusor.split('.')\n",
-    "    ele_react1=precusor1.split('.')\n",
-    "    precusor_main=[i for i in ele_react if i not in ele_react1]\n",
-    "    precusor_str='.'.join(precusor_main)\n",
-    "    reagent=[i for i in ele_react if i in ele_react1]\n",
-    "\n",
-    "    # Choose mapped product\n",
-    "    ele_pro=product.split('.')\n",
-    "    ele_pro1=product1.split('.')\n",
-    "    product_main=[i for i in ele_pro if i not in ele_pro1]\n",
-    "    product_str='.'.join(product_main)\n",
-    "    \n",
-    "    new_react=precusor_str+'>>'+product_str\n",
     "\n",
     "    return new_react\n",
     "\n",
